[package]
name = "action-executor"
version = "0.1.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]

[dependencies]
anyhow = "1"
async-trait = "0.1"
async-std = "1.7"
gcloud = {path = "../gcloud"}
log = "0.4"
plugin-core = {path = "../plugin-core"}
plugin-host = {path = "../plugin-host"}
protocol = {path = "../protocol"}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toolkit = {path = "../toolkit"}
