[package]
name = "gcloud"
version = "0.1.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
tempfile = "3"

[dependencies]
base64 = "0.12"
google-datastore1 = "*"
google-pubsub1 = "*"
hyper = "^0.10"
hyper-rustls = "^0.6"
serde = "^1.0"
serde_json = "^1.0"
snafu = "0.6"
yup-oauth2 = "^1.0"
protocol = {path = "../protocol"}

datastore_to_entity_derive = {path = "./datastore_to_entity_derive"}
