[package]
name = "gcloud"
version = "0.1.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
tempfile = "3"

[dependencies]
async-std = "1.4"
async-trait = "0.1"
base64 = "0.13"
google-cloud = {version = "0.1", features = ["datastore", "pubsub"]}
log = "0.4"
serde = "^1.0"
serde_json = "^1.0"
snafu = "0.6"

datastore_to_entity_derive = {path = "./datastore_to_entity_derive"}
