[package]
name = "gcloud"
version = "0.1.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
tempfile = "3"

[dependencies]
tokio-async-std = "1.5"
async-trait = "0.1"
base64 = "0.13"
google-cloud = {git = "https://github.com/dalloriam/google-cloud-rs", features = ["full"]}
log = "=0.4.16"
serde = "^1.0"
serde_json = "^1.0"
snafu = "0.7"
toolkit = {path = "../toolkit"}
