[package]
name = "interpreter-svc"
version = "0.1.0"
authors = ["Laurent Leclerc-Poulin <laurentleclercpoulin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trigger-interpreter = {path = "../trigger-interpreter"}
protocol = {path = "../protocol"}