[package]
name = "plugin-host"
version = "0.1.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tempfile = "3"

[dependencies]
libloading = "0.6"
log = "=0.4.11"
plugin-core = {path = "../plugin-core"}
snafu = "0.6"
