[package]
name = "plugin-host"
version = "0.1.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tempfile = "3"

[dependencies]
libloading = "0.7"
log = "=0.4.14"
plugin-core = {path = "../plugin-core"}
snafu = "0.6"
