[package]
name = "process"
version = "0.1.0"
authors = ["Laurent Leclerc-Poulin <laurentleclercpoulin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "shift3"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
ctrlc = "3.1"
env_logger = "0.7"
gcloud = {path = "../gcloud"}
log = "0.4"
protocol = {path = "../protocol"} # TODO: Remove. Used only temporarily for disk mocks.
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
trigger-system = {path = "../trigger-system"}
