[package]
name = "process"
version = "0.1.0"
authors = ["Laurent Leclerc-Poulin <laurentleclercpoulin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "shift3"
path = "src/main.rs"

[lib]
name = "process"
path = "src/process/lib.rs"

[dev-dependencies]
serde_json = "1.0"
tempdir = "0.3"

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.1"
ctrlc = "3.1"
env_logger = "0.7"
gcloud = {path = "../gcloud"}
log = "0.4"
polyglot = {version = "0.2.1", features = ["json_fmt", "toml_fmt", "yaml_fmt"]}
serde = {version = "1.0", features = ["derive"]}
toolkit = {path = "../toolkit"}
trigger-system = {path = "../trigger-system"}
trigger-interpreter = {path = "../trigger-interpreter"}
