[package]
name = "protocol"
version = "0.1.0"
authors = ["Laurent Leclerc-Poulin <laurentleclercpoulin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-cloud = {git = "https://github.com/dalloriam/google-cloud-rs", features = ["datastore", "datastore-derive"]}
serde = {version = "1.0", features = ["derive"]}
snafu = "0.6"
