[package]
name = "toolkit"
version = "0.1.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
webserver = ["actix-web"]

[dependencies]
actix-web = {version = "3", optional = true}
async-trait = "0.1"
log = "0.4"
serde = "1"
snafu = "0.6"
