[package]
name = "toolkit"
version = "0.1.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
full = ["sled-store"]

sled-store = ["sled", "sha-1"]

[dev-dependencies]
serde = {version = "1", features = ["derive"]}

[dependencies]
async-trait = "0.1"
log = "=0.4.14"
serde = "1"
serde_json = "1"
sled = {version = "0.34", optional = true}
sha-1 = {version = "0.10", optional = true}
snafu = "0.7"
