[package]
name = "trigger-interpreter"
version = "0.1.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
protocol = {path = "../protocol"}
gcloud = {path = "../gcloud"}
serde_json = "1.0"
anyhow = "1.0.31"
handlebars = "3.3.0"