[package]
name = "trigger-system"
version = "0.1.0"
authors = ["Laurent Leclerc-Poulin <laurentleclercpoulin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = {path = "../protocol"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
toolkit = {path = "../toolkit"}