[package]
name = "trigger-system"
version = "0.1.0"
authors = ["Laurent Leclerc-Poulin <laurentleclercpoulin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tempdir = "0.3"

[dependencies]
anyhow = "1.0"
log = "0.4"
gcloud = {path = "../gcloud"}
plugin-core = {path = "../plugin-core"}
plugin-host = {path = "../plugin-host"}
protocol = {path = "../protocol"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
toolkit = {path = "../toolkit"}
