[package]
name = "notify"
version = "0.1.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
plugin-core = {path = "../../plugin-core"}
protocol = {path = "../../protocol"}
serde = {version = "1", features=["derive"]}
serde_json = "1"
